completed task slider needs improvement

--- a/index.css
+++ b/index.css
@@ -23,3 +23,11 @@
     border-radius: 10px;
     box-shadow: #00000029 5px 8px 10px;
 }
+
+/* carosel css start */
+
+  
+  /* carosel css end */
+
+
+
